<?xml version="1.0"?>
<package>
  <name>sweep_planner</name>
  <version>1.0.0</version>
  <description>The sweep_planner is a global planner which will sweep the entire world
  without going back to the same location twice. </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chambrierg@gmail.com">guillaume</maintainer>


  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sweep_planner</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author>

  <depend package="roscpp"/>
  <depend package="costmap_2d"/>
  <depend package="pluginlib"/>
  <depend package="nav_core"/>
  <depend package="base_local_planner" />
  <depend package="tf" />
  <depend package="angles" /-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>        roscpp              </build_depend>
  <run_depend>          roscpp              </run_depend>

  <build_depend>        nav_core            </build_depend>
  <run_depend>          nav_core            </run_depend>

  <build_depend>        costmap_2d          </build_depend>
  <run_depend>          costmap_2d          </run_depend>

  <build_depend>        tf                  </build_depend>
  <run_depend>          tf                  </run_depend>

  <build_depend>        pluginlib           </build_depend>
  <run_depend>          pluginlib           </run_depend>

  <build_depend>        base_local_planner  </build_depend>
  <run_depend>          base_local_planner  </run_depend>

  <build_depend>        optitrack_rviz      </build_depend>
  <run_depend>          optitrack_rviz      </run_depend>

  <build_depend>        topological_nav      </build_depend>
  <run_depend>          topological_nav      </run_depend>

  <build_depend>        eigen               </build_depend>
  <run_depend>          eigen               </run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav_core plugin="${prefix}/sweep_planner_plugin.xml" />
  </export>
</package>
